refactor: 랭킹 누적 반영 대상 변경에 따른 코드 리팩토링
기존 : AuthInfoEntity
변경 : UserProfileEntity